# erp-test

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  dev.sh  docker-compose.cli.yml  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: manage.py
src/apps/core/: middleware.py  models.py  observability.py  paginator.py  throttles.py  validators.py  views.py
src/apps/core/management/commands/: seed_initial_data.py
src/apps/customers/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_document_alter_customer_email.py
src/apps/orders/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_orderstatushistory_changed_by.py
src/apps/products/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py
src/config/: settings.py  urls.py  wsgi.py
src/templates/: rapidoc.html
tests/: conftest.py
tests/core/: test_health.py  test_rate_limit.py
tests/customers/: test_customers.py
tests/orders/: test_orders.py
tests/products/: test_products.py
